Salesforce/main/default/main/default/objects/Activity/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <label>Evento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Día de Campo</fullName>
            </value>
            <value>
                <fullName>Treinamento</fullName>
            </value>
            <value>
                <fullName>Palestra</fullName>
            </value>
            <value>
                <fullName>Apresentação de dados, novos produtos e novos projetos</fullName>
            </value>
            <value>
                <fullName>Contrato de multiplicação</fullName>
            </value>
            <value>
                <fullName>Ensaio de manejo</fullName>
            </value>
            <value>
                <fullName>Combate à Pirataria</fullName>
            </value>
            <value>
                <fullName>Relatório Semanal</fullName>
            </value>
            <value>
                <fullName>Reunião</fullName>
            </value>
            <value>
                <fullName>Contato Telefônico</fullName>
            </value>
            <value>
                <fullName>Observações Gerais</fullName>
            </value>
            <value>
                <fullName>Visita aos Produtores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>