Salesforce/main/default/main/default/objects/Activity/fields/id_de_Relatorio__c.field-meta.xml
<CustomField>
    <fullName>id_de_Relatorio__c</fullName>
    <label>id de Relatorio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>