Salesforce/main/default/main/default/objects/Activity/fields/Nombre_Productor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Productor__c</fullName>
    <label>Nome Produtor</label>
    <type>TextArea</type>
</CustomField>