Salesforce/main/default/main/default/objects/Activity/fields/Numero_de_participantes__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_participantes__c</fullName>
    <label>Número de participantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>