Salesforce/main/default/main/default/objects/Activity/fields/Status_do_evento__c.field-meta.xml
<CustomField>
    <fullName>Status_do_evento__c</fullName>
    <label>Status do evento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Muito ruim</fullName>
            </value>
            <value>
                <fullName>Ruim</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Bom</fullName>
            </value>
            <value>
                <fullName>Muito bom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>