Salesforce/main/default/main/default/objects/Activity/listViews/Prximoseventos.listView-meta.xml
<ListView>
    <fullName>Prximoseventos</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Próximos eventos</label>
</ListView>